--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"dotenv": "^17.2.3",
 		"lucide-react": "^0.562.0",
 		"next": "15.3.3",
+		"next-themes": "^0.4.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
@@ -35,5 +37,8 @@
 		"tailwindcss": "^4",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5"
+	},
+	"volta": {
+		"node": "22.21.1"
 	}
 }
